# email_delivery_service

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
email_delivery_service/: controller.py  hooks.py  install.py  modules.txt
email_delivery_service/config/: desktop.py  docs.py
email_delivery_service/email_delivery_service/report/email_delivery_analytics/: email_delivery_analytics.js  email_delivery_analytics.json  email_delivery_analytics.py
email_delivery_service/fixtures/: client_script.json
