[project]
name = "email_delivery_service"
authors = [
    { name = "Frappe", email = "hello@frappe.io"}
]
description = "Tiny app to send emails via external email delivery services."
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe>=12.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.bench.frappe-dependencies]
frappe = ">=12.0.0,<17.0.0"
